# protoc-gen-yara

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  build.sh  go.mod  go.sum  main.go
example/: example.proto
generator/: BUILD.bazel  case.go  case_test.go  generator.go  generator_test.go  template.go
generator/testdata/: customer.c  customer.pb-c.c  customer.pb-c.h  customer.proto  test_pb2.c  test_pb2.proto  test_pb3.c  test_pb3.proto  test_proto2.c  test_proto2.proto
pb/: BUILD.bazel  yara.pb.go  yara.proto
