load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "yara_proto",
    srcs = ["yara.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "yara_go_proto",
    importpath = "github.com/VirusTotal/protoc-gen-yara/pb",
    proto = ":yara_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":yara_go_proto"],
    importpath = "github.com/VirusTotal/protoc-gen-yara/pb",
    visibility = ["//visibility:public"],
)
